Added text-transform to h1 to avoid using all caps

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<div class="clearfix">
 		<aside>
 			<br /><br />
-			<h1>HEATHER</h1>
-			<h1>STEVENS</h1>
+			<h1>Heather</h1>
+			<h1>Stevens</h1>
 
 			<img id="me" src="images/heather.png" alt="Heather Stevens" title="This is me!" />
 
